# deepglue

./: .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  mkdocs.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml  ci_cd.yml  deploy.yml
demos/: readme.md
demos/fashion_mnist/: fashion_demo.ipynb  requirements.txt
docs/: api.md  index.md  mkdocs.yml  usage.md
docs/docs/: index.md
src/deepglue/: __init__.py  environment_utils.py  file_utils.py  plot_utils.py  training_utils.py
tests/: conftest.py  test_file_utils.py  test_plot_utils.py  test_training_utils.py
