[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepglue"
description = "deepglue: A utility package for deep learning projects. Keeping things together."
authors = [{ name = "Eric Thomson", email = "thomson.eric@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "torch", 
    "numpy",
    "matplotlib",
    "pytest"
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

# following is so version control works
dynamic = ["version"]

[tool.hatch.build.targets.wheel]
include = ["src/deepglue/**"]

[tool.hatch.build]
packages = ["src/deepglue"]  # Specify the path to the package directory

[tool.hatch.version]
path = "src/deepglue/__init__.py"
pattern = '^__version__ = "(?P<version>.*)"' 
